--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-node_modules
-package-lock.json
-.env
+./1-frontend/node_modules/
+./1-frontend/package-lock.json
+./2-backend/node_modules/
+./2-backend/package-lock.json
